# xfwl4

./: .gitignore  .gitlab-ci.yml  .gitmodules  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cargo  Dockerfile.meson  Makefile  NEWS  README.md  build.rs  deny.toml  meson.build  meson.install  meson_options.txt
.githooks/: pre-commit
.gitlab/issue_templates/: default.md
.gitlab/merge_request_templates/: default.md
examples/: cursor_shape.rs  output_power.rs  parent_child_stacking.rs  x11_demands_attention.rs  x11_initial_state.rs  xdg_toplevel_icon.rs
notes/: configuration.md  decorations_placement.md  gtk.md  initial_window_placement.md
po/: POTFILES  ar.po  ast.po  be.po  be@tarask.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fa_IR.po  fi.po  fr.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  ka.po  kk.po  ko.po  lt.po  ms.po  nb.po  nl.po  nn.po  oc.po  (+19 more)
resources/: defaults  meson.build  xdg-session-management-v1.xml  xfwl4-compositor-ui-private-v1.xml  xfwl4.desktop.in
src/: cli.rs  cursor.rs  cycle.rs  drawing.rs  env.rs  focus.rs  input_handler.rs  lib.rs  main.rs  render.rs  state.rs  udev.rs  ui_thread.rs  util.rs  winit.rs  workspaces.rs  x11.rs
src/app/: cli.rs  env.rs  glib_source.rs  gtk_settings_dbus.rs  mini_dbus.rs  mod.rs  session.rs  time.rs  zbus_ext.rs
src/backend/: mod.rs
src/backend/udev/: device.rs  input_handler.rs  mod.rs  render.rs
src/backend/udev/handlers/: mod.rs  wlr_gamma_control.rs  wlr_output_power_management.rs
src/backend/winit/: mod.rs  renderer.rs
src/backend/x11/: mod.rs  renderer.rs
src/config/: keyboard_config.rs  mod.rs  output_config.rs  pointer_config.rs  xfwl4_config.rs  xfwl4_config_types.rs
src/core/: cursor.rs  cycle.rs  edge.rs  focus.rs  input_handler.rs  mod.rs  placement.rs  render.rs  session.rs  snap.rs  state.rs  ui_thread.rs  workspaces.rs  x11_wm.rs
src/core/config/: gtk_settings_sync.rs  keyboard_config.rs  keyboard_shortcuts.rs  keyboard_shortcuts_config.rs  mod.rs  output_config.rs  pointer_config.rs  ui_settings.rs  xfwl4_config.rs  xfwl4_config_types.rs  xsettings_manager.rs
src/core/debug/: fps_element.rs  mod.rs
src/core/drawing/: decorations.rs  mod.rs  pointer.rs  shadows.rs  ssd.rs  wireframe.rs  zoom.rs
src/core/handlers/: data_device.rs  decoration.rs  ext_idle_notify.rs  ext_session_lock.rs  fractional_scale.rs  image_capture_source.rs  image_copy_capture.rs  input.rs  mod.rs  output.rs  seat.rs  security_context.rs  shm.rs  wlr_gamma_control.rs  wlr_output_management.rs  wlr_screencopy.rs  wp_idle_inhibit.rs  xdg_activation.rs  xdg_foreign.rs  xdg_session_management.rs  xdg_toplevel_icon.rs  xfwl4_compositor_ui.rs
src/core/handlers/foreign_toplevel/: ext_foreign_toplevel_list.rs  mod.rs  wlr_foreign_toplevel_management.rs  xfce_foreign_toplevel_management.rs
src/core/shell/: element.rs  element_impls.rs  layout.rs  mod.rs  ssd.rs  x11.rs  xdg.rs
src/core/shell/grabs/: click.rs  common.rs  maybe.rs  mod.rs  moving.rs  resize.rs  tabwin.rs
src/core/util/: client_ext.rs  color_ops.rs  fd_icons_icon_theme.rs  geometry_ext.rs  icon_theme.rs  image_data.rs  laptop.rs  mod.rs  rc.rs  scroll.rs  seat_ext.rs  session.rs  x11.rs  xfconf_source.rs  xkb_ext.rs  xpm_ext.rs
src/core/util/xpm/: mod.rs  x11r6colors.rs
src/core/workspaces/: manager.rs  mod.rs  workspace.rs
src/debug/: fps_element.rs  mod.rs
src/drawing/: decorations.rs  mod.rs  pointer.rs
src/handlers/: data_device.rs  decoration.rs  ext_idle_notify.rs  ext_session_lock.rs  fractional_scale.rs  image_capture_source.rs  image_copy_capture.rs  input.rs  mod.rs  output.rs  seat.rs  security_context.rs  shm.rs  wlr_gamma_control.rs  wlr_output_management.rs  wlr_screencopy.rs  wp_idle_inhibit.rs  xdg_activation.rs  xdg_decoration.rs  xdg_foreign.rs  xdg_toplevel_icon.rs
src/handlers/foreign_toplevel/: ext_foreign_toplevel_list.rs  mod.rs  wlr_foreign_toplevel_management.rs
src/protocols/: ext_workspace.rs  mod.rs  wlr_foreign_toplevel_management.rs  wlr_gamma_control.rs  wlr_output_management.rs  wlr_output_power_management.rs  wlr_screencopy.rs  xdg_session_management.rs  xfce_input_device_list.rs  xfwl4_compositor_ui.rs
src/protocols/foreign_toplevel_management/: mod.rs  wlr_foreign_toplevel_management.rs  xfce_foreign_toplevel_management.rs
src/protocols/output_management/: mod.rs  wlr_output_management.rs  xfce_output_management.rs
src/shell/: element.rs  element_impls.rs  grabs.rs  mod.rs  ssd.rs  x11.rs  xdg.rs
src/shell/grabs/: maybe.rs  mod.rs  moving.rs  resize.rs
src/ui/: compositor_ui_protocol.rs  gtk_settings.rs  gtk_settings_sync.rs  keyboard_shortcuts.rs  keyboard_shortcuts_config.rs  mod.rs  supervisor.rs  tabwin.rs  theme.rs  ui_main.rs  util.rs  wayland_client_gsource.rs  window_menu.rs
src/util/: cairo_ext.rs  client_ext.rs  gdk_pixbuf_ext.rs  icon.rs  icon_theme.rs  image_copy_ext.rs  image_data.rs  io.rs  iter.rs  mod.rs  output_ext.rs  rc.rs  x11.rs  xpm_ext.rs
test-clients/: Cargo.toml
test-clients/examples/: cursor_shape.rs  input_device_list.rs  layer_shell_center.rs  output_power.rs  parent_child_stacking.rs  x11_demands_attention.rs  x11_initial_state.rs  x11_opaque_region.rs  xdg_toplevel_icon.rs
test-clients/src/: wayland.rs
