[package]
name = "xfwl4"
version = "0.1.0"
authors = ["Brian Tarricone <brian@tarricone.org>"]
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
bitflags = "2.2.1"
clap = { version = "4.5.54", features = ["derive"] }
fps_ticker = {version = "1.0.0", optional = true}
freedesktop-icons = "0.4.0"
gettext-rs = "0.7.7"
glib = { version = "0.18", features = ["log", "v2_72"] }
gtk = { version = "0.18", features = ["v3_24"] }
image = {version = "0.25.1", default-features = false, optional = true, features = ["png"]}
indexmap = "2"
pangocairo = "0.18"
profiling = { version = "1.0" }
puffin_http = { version = "0.13", optional = true }
rand = "0.8"
regex = "1.12.2"
renderdoc = {version = "0.11.0", optional = true}
thiserror = "1"
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
xcursor = {version = "0.3.3", optional = true}
xkbcommon = "0.9.0"

[dependencies.smithay]
git = "https://github.com/smithay/smithay"
rev = "acaa191012d77421f34ddb160f36f14bf3f8a245"
default-features = false
features = ["desktop", "wayland_frontend"]

[dependencies.smithay-drm-extras]
git = "https://github.com/smithay/smithay"
rev = "acaa191012d77421f34ddb160f36f14bf3f8a245"
optional = true

[dependencies.x11rb]
default-features = false
features = ["composite"]
optional = true
version = "0.13.0"

[dependencies.libxfce4kbd-private]
git = "https://gitlab.xfce.org/bindings/xfce4-rs.git"
rev = "4517f9b51e76aedb1d5875300946f012f597b855"
features = ["v4_21_4"]

[dependencies.xfconf]
git = "https://gitlab.xfce.org/bindings/xfce4-rs.git"
rev = "02349ff4af699287455ebf1131ccfd55ed0af9f4"
features = ["v4_21_2"]

[build-dependencies]
gl_generator = "0.14"
prettyplease = "0.2.37"
syn = "2.0.114"
tempfile = "3.24.0"

[dev-dependencies]
smithay-client-toolkit = "0.20.0"
x11rb = "0.13.0"

[features]
debug = ["fps_ticker", "image/png", "renderdoc"]
default = ["egl", "winit", "x11", "udev", "xwayland"]
egl = ["smithay/use_system_lib", "smithay/backend_egl"]
test_all_features = ["default", "debug"]
udev = [
  "smithay-drm-extras",
  "smithay/backend_libinput",
  "smithay/backend_udev",
  "smithay/backend_drm",
  "smithay/backend_gbm",
  "smithay/backend_vulkan",
  "smithay/backend_egl",
  "smithay/backend_session_libseat",
  "image",
  "smithay/renderer_gl",
  "smithay/renderer_pixman",
  "smithay/renderer_multi",
  "xcursor",
]
winit = ["smithay/backend_winit", "smithay/backend_drm"]
x11 = ["smithay/backend_x11", "x11rb", "smithay/renderer_gl", "smithay/backend_vulkan"]
xwayland = ["smithay/xwayland", "x11rb", "smithay/x11rb_event_source", "xcursor"]
profile-with-puffin = ["profiling/profile-with-puffin", "puffin_http"]
profile-with-tracy = ["profiling/profile-with-tracy", "smithay/tracy_gpu_profiling"]
profile-with-tracy-mem = ["profile-with-tracy"]
gettext-system = ["gettext-rs/gettext-system"]
