[workspace]
members = [
    ".",
    "test-clients",
]
default-members = [
    ".",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Brian Tarricone <brian@tarricone.org>"]
edition = "2024"
license = "GPL-3.0-or-later"

[package]
name = "xfwl4"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[profile.release-with-debug]
inherits = "release"
debug = true

[dependencies]
anyhow = "1"
bitflags = "2.2.1"
bytes = "1.11.1"
clap = { version = "4.5.54", features = ["derive"] }
fps_ticker = {version = "1.0.0", optional = true}
freedesktop-icons = "0.4.0"
gettext-rs = "0.7.7"
glib = { version = "0.18", features = ["log", "v2_72"] }
gtk = { version = "0.18", features = ["v3_24"] }
image = { version = "0.25.1", default-features = false, features = ["png"] }
indexmap = "2"
libc = "0.2.183"
libdisplay-info = { version = "0.3.0", optional = true }
pangocairo = "0.18"
profiling = { version = "1.0" }
puffin_http = { version = "0.13", optional = true }
rand = "0.9"
regex = "1.12.2"
renderdoc = {version = "0.11.0", optional = true}
rustix = { version = "1.1.4", features = ["fs", "pipe"] }
thiserror = "1"
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
wayland-client = "0.31"
wayland-scanner = "0.31.9"
xcursor = "0.3.3"
xkbcommon = "0.9.0"

[dependencies.smithay]
git = "https://github.com/smithay/smithay"
rev = "13c71bafc0d4d716b314881d78461d1c5d52c70d"
default-features = false
features = ["desktop", "wayland_frontend"]

[dependencies.smithay-drm-extras]
git = "https://github.com/smithay/smithay"
rev = "13c71bafc0d4d716b314881d78461d1c5d52c70d"
optional = true

[dependencies.x11rb]
default-features = false
features = ["composite"]
optional = true
version = "0.13.0"

[dependencies.libxfce4kbd-private]
git = "https://gitlab.xfce.org/bindings/xfce4-rs.git"
rev = "4517f9b51e76aedb1d5875300946f012f597b855"
features = ["v4_21_4"]

[dependencies.xfconf]
git = "https://gitlab.xfce.org/bindings/xfce4-rs.git"
rev = "02349ff4af699287455ebf1131ccfd55ed0af9f4"
features = ["v4_21_2"]

[build-dependencies]
gl_generator = "0.14"
prettyplease = "0.2.37"
syn = "2.0.114"
tempfile = "3.24.0"

[features]
debug = ["fps_ticker", "image/png", "renderdoc"]
default = ["egl", "winit", "x11", "udev", "xwayland"]
egl = ["smithay/use_system_lib", "smithay/backend_egl"]
test_all_features = ["default", "debug"]
udev = [
  "libdisplay-info",
  "smithay-drm-extras",
  "smithay/backend_libinput",
  "smithay/backend_udev",
  "smithay/backend_drm",
  "smithay/backend_gbm",
  "smithay/backend_vulkan",
  "smithay/backend_egl",
  "smithay/backend_session_libseat",
  "smithay/renderer_gl",
  "smithay/renderer_pixman",
  "smithay/renderer_multi",
]
winit = ["smithay/backend_winit", "smithay/backend_drm"]
x11 = ["smithay/backend_x11", "x11rb", "smithay/renderer_gl", "smithay/backend_vulkan"]
xwayland = ["smithay/xwayland", "x11rb", "smithay/x11rb_event_source"]
profile-with-puffin = ["profiling/profile-with-puffin", "puffin_http"]
profile-with-tracy = ["profiling/profile-with-tracy", "smithay/tracy_gpu_profiling"]
profile-with-tracy-mem = ["profile-with-tracy"]
gettext-system = ["gettext-rs/gettext-system"]
